--- a/css/style.css
+++ b/css/style.css
@@ -750,7 +750,7 @@ footer {
      height: 200px;
      width: 100%;
      display: flex;
-     padding-top: 3em;
+     margin: 3em 0px 2em 0px;
 }
 
 .social-footer-left {
